Add new validation for binary quantization ()
Adds validation for new `vector-3.0` configuration allowing the use of
the quanization type to specify binary quantization.