@@ -19,6 +19,7 @@
  */
 package org.neo4j.kernel.api.impl.schema.vector;
 
+import static java.lang.String.CASE_INSENSITIVE_ORDER;
 import static java.util.Map.entry;
 import static org.neo4j.internal.schema.SequencedIndexSettingProcessors.mergeToValidatingProcessor;
 import static org.neo4j.kernel.api.impl.schema.vector.Neo4jVectorSimilarityFunction.EUCLIDEAN;
@@ -28,8 +29,12 @@ import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.DIM
 import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.HNSW_EF_CONSTRUCTION_EXTRACTOR;
 import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.HNSW_M_EXTRACTOR;
 import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.OPTIONAL_DIMENSION_CONVERTER;
+import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.OPTIONAL_QUANTIZATION_ENABLED_CONVERTER;
 import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.QUANTIZATION_ENABLED_EXTRACTOR;
 import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.QUANTIZATION_ENABLED_VALIDATOR;
+import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.QUANTIZATION_TYPE_EXTRACTOR;
+import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.QUANTIZATION_TYPE_UPPER_CASE_CONVERTER;
+import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.REMOVE_QUANTIZATION_ENABLED;
 import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.SIMILARITY_FUNCTION_EXTRACTOR;
 import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.SIMILARITY_FUNCTION_UPPER_CASE_CONVERTER;
 import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.dimensionValidator;
@@ -41,9 +46,13 @@ import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.hns
 import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.hnswMValidator;
 import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.optionalDimensionDefault;
 import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.optionalDimensionValidator;
+import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.optionalQuantizationEnabledDefault;
 import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.quantizationEnabledDefault;
 import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.quantizationEnabledToTypeMigrator;
 import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.quantizationType;
+import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.quantizationTypeDefault;
+import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.quantizationTypeLookup;
+import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.quantizationTypeNormalizer;
 import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.similarityFunctionDefault;
 import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.similarityFunctionLookup;
 import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.similarityFunctionNormalizer;
@@ -51,10 +60,10 @@ import static org.neo4j.kernel.api.impl.schema.vector.VectorIndexConfigUtils.sim
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
-import java.util.HashMap;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Optional;
 import java.util.OptionalInt;
 import java.util.Set;
 import java.util.SortedMap;
@@ -87,6 +96,7 @@ public enum VectorIndexVersion {
             0,
             0,
             Collections.emptySet(),
+            Collections.emptySet(),
             Collections.emptySet()) {
         @Override
         protected Map<KernelVersion, TypedIndexSettingsValidator<VectorIndexConfig>> configureValidators() {
@@ -113,6 +123,7 @@ public enum VectorIndexVersion {
             512,
             3200,
             Set.of(EUCLIDEAN, SIMPLE_COSINE),
+            Collections.emptySet(),
             Collections.emptySet()) {
         @Override
         protected Map<KernelVersion, TypedIndexSettingsValidator<VectorIndexConfig>> configureValidators() {
@@ -160,7 +171,8 @@ public enum VectorIndexVersion {
             512,
             3200,
             Set.of(EUCLIDEAN, L2_NORM_COSINE),
-            Set.of(false, true)) {
+            Set.of(false, true),
+            Collections.emptySet()) {
         @Override
         protected Map<KernelVersion, TypedIndexSettingsValidator<VectorIndexConfig>> configureValidators() {
             return Map.ofEntries(
@@ -217,34 +229,66 @@ public enum VectorIndexVersion {
             512,
             3200,
             Set.of(EUCLIDEAN, L2_NORM_COSINE),
-            Set.of(false, true)) {
+            Set.of(false, true),
+            Set.of(VectorQuantizationType.NONE, VectorQuantizationType.SCALAR, VectorQuantizationType.BINARY)) {
         @Override
         protected Map<KernelVersion, TypedIndexSettingsValidator<VectorIndexConfig>> configureValidators() {
-            return Map.ofEntries(entry(
-                    KernelVersion.VERSION_LUCENE_10_INTRODUCED,
-                    new VersionedValidator(
-                            this,
-                            new IndexSettingExtractors(
-                                    DIMENSIONS_EXTRACTOR,
-                                    SIMILARITY_FUNCTION_EXTRACTOR,
-                                    QUANTIZATION_ENABLED_EXTRACTOR,
-                                    HNSW_M_EXTRACTOR,
-                                    HNSW_EF_CONSTRUCTION_EXTRACTOR),
-                            mergeToValidatingProcessor(
-                                    OPTIONAL_DIMENSION_CONVERTER,
-                                    optionalDimensionDefault(OptionalInt.empty()),
-                                    optionalDimensionValidator(1, maxDimensions()),
-                                    SIMILARITY_FUNCTION_UPPER_CASE_CONVERTER,
-                                    similarityFunctionDefault(L2_NORM_COSINE),
-                                    similarityFunctionLookup(nameToSimilarityFunction()),
-                                    similarityFunctionNormalizer(nameToSimilarityFunction()),
-                                    quantizationEnabledDefault(false, true),
-                                    QUANTIZATION_ENABLED_VALIDATOR,
-                                    quantizationEnabledToTypeMigrator(VectorQuantizationType.SCALAR),
-                                    hnswMDefault(16),
-                                    hnswMValidator(1, maxHnswM()),
-                                    hnswEfConstructionDefault(100),
-                                    hnswEfConstructionValidator(1, maxHnswEfConstruction())))));
+            return Map.ofEntries(
+                    entry(
+                            KernelVersion.VERSION_LUCENE_10_INTRODUCED,
+                            new VersionedValidator(
+                                    this,
+                                    new IndexSettingExtractors(
+                                            DIMENSIONS_EXTRACTOR,
+                                            SIMILARITY_FUNCTION_EXTRACTOR,
+                                            QUANTIZATION_ENABLED_EXTRACTOR,
+                                            HNSW_M_EXTRACTOR,
+                                            HNSW_EF_CONSTRUCTION_EXTRACTOR),
+                                    mergeToValidatingProcessor(
+                                            OPTIONAL_DIMENSION_CONVERTER,
+                                            optionalDimensionDefault(OptionalInt.empty()),
+                                            optionalDimensionValidator(1, maxDimensions()),
+                                            SIMILARITY_FUNCTION_UPPER_CASE_CONVERTER,
+                                            similarityFunctionDefault(L2_NORM_COSINE),
+                                            similarityFunctionLookup(nameToSimilarityFunction()),
+                                            similarityFunctionNormalizer(nameToSimilarityFunction()),
+                                            quantizationEnabledDefault(false, true),
+                                            QUANTIZATION_ENABLED_VALIDATOR,
+                                            quantizationEnabledToTypeMigrator(VectorQuantizationType.SCALAR),
+                                            hnswMDefault(16),
+                                            hnswMValidator(1, maxHnswM()),
+                                            hnswEfConstructionDefault(100),
+                                            hnswEfConstructionValidator(1, maxHnswEfConstruction())))),
+                    entry(
+                            KernelVersion.GLORIOUS_FUTURE,
+                            new VersionedValidator(
+                                    this,
+                                    new IndexSettingExtractors(
+                                            DIMENSIONS_EXTRACTOR,
+                                            SIMILARITY_FUNCTION_EXTRACTOR,
+                                            QUANTIZATION_ENABLED_EXTRACTOR, // allowed in initial creation
+                                            QUANTIZATION_TYPE_EXTRACTOR,
+                                            HNSW_M_EXTRACTOR,
+                                            HNSW_EF_CONSTRUCTION_EXTRACTOR),
+                                    mergeToValidatingProcessor(
+                                            OPTIONAL_DIMENSION_CONVERTER,
+                                            optionalDimensionDefault(OptionalInt.empty()),
+                                            optionalDimensionValidator(1, maxDimensions()),
+                                            SIMILARITY_FUNCTION_UPPER_CASE_CONVERTER,
+                                            similarityFunctionDefault(L2_NORM_COSINE),
+                                            similarityFunctionLookup(nameToSimilarityFunction()),
+                                            similarityFunctionNormalizer(nameToSimilarityFunction()),
+                                            OPTIONAL_QUANTIZATION_ENABLED_CONVERTER,
+                                            optionalQuantizationEnabledDefault(Optional.empty()),
+                                            QUANTIZATION_TYPE_UPPER_CASE_CONVERTER,
+                                            quantizationTypeDefault(VectorQuantizationType.SCALAR),
+                                            quantizationTypeLookup(supportedQuantizationTypes()),
+                                            REMOVE_QUANTIZATION_ENABLED,
+                                            quantizationTypeNormalizer(supportedQuantizationTypes()),
+                                            hnswMDefault(16),
+                                            hnswMValidator(1, maxHnswM()),
+                                            hnswEfConstructionDefault(100),
+                                            hnswEfConstructionValidator(1, maxHnswEfConstruction())))));
         }
 
         @Override
@@ -288,6 +332,7 @@ public enum VectorIndexVersion {
     private final int maxDimensions;
     private final Map<String, VectorSimilarityFunction> similarityFunctions;
     private final Set<Boolean> quantizationBooleans;
+    private final Set<VectorQuantizationType> quantizationTypes;
     private final int maxHnswM;
     private final int maxHnswEfConstruction;
     private final SortedMap<KernelVersion, TypedIndexSettingsValidator<VectorIndexConfig>> validators;
@@ -300,23 +345,30 @@ public enum VectorIndexVersion {
             int maxHnswM,
             int maxHnswEfConstruction,
             Set<VectorSimilarityFunction> supportedSimilarityFunctions,
-            Set<Boolean> supportedQuantizationEnableds) {
+            Set<Boolean> supportedQuantizationEnableds,
+            Set<VectorQuantizationType> supportedQuantizationTypes) {
         this.minimumRequiredKernelVersion = minimumRequiredKernelVersion;
         this.descriptor = providerDescriptor;
         this.maxDimensions = maxDimensions;
         {
-            final Map<String, VectorSimilarityFunction> similarityFunctions =
-                    new HashMap<>(supportedSimilarityFunctions.size());
+            final Map<String, VectorSimilarityFunction> similarityFunctions = new TreeMap<>(CASE_INSENSITIVE_ORDER);
             for (final VectorSimilarityFunction similarityFunction : supportedSimilarityFunctions) {
                 similarityFunctions.put(similarityFunction.functionName().toUpperCase(Locale.ROOT), similarityFunction);
             }
             this.similarityFunctions = Collections.unmodifiableMap(similarityFunctions);
         }
-        this.quantizationBooleans = Collections.unmodifiableSet(supportedQuantizationEnableds);
+        this.quantizationBooleans = Collections.unmodifiableSortedSet(new TreeSet<>(supportedQuantizationEnableds));
+        {
+            final SortedSet<VectorQuantizationType> quantizationTypes =
+                    new TreeSet<>(Comparator.comparing(Enum::name, CASE_INSENSITIVE_ORDER));
+            quantizationTypes.addAll(supportedQuantizationTypes);
+            this.quantizationTypes = Collections.unmodifiableSortedSet(quantizationTypes);
+        }
+
         this.maxHnswM = maxHnswM;
         this.maxHnswEfConstruction = maxHnswEfConstruction;
         {
-            final TreeMap<KernelVersion, TypedIndexSettingsValidator<VectorIndexConfig>> validators =
+            final SortedMap<KernelVersion, TypedIndexSettingsValidator<VectorIndexConfig>> validators =
                     new TreeMap<>(Comparator.reverseOrder());
             validators.putAll(configureValidators());
             this.validators = Collections.unmodifiableSortedMap(validators);
@@ -352,7 +404,7 @@ public enum VectorIndexVersion {
     public abstract boolean acceptsValueInstanceType(Value candidate);
 
     public VectorSimilarityFunction maybeSimilarityFunction(String name) {
-        return similarityFunctions.get(name.toUpperCase(Locale.ROOT));
+        return similarityFunctions.get(name);
     }
 
     public VectorSimilarityFunction similarityFunction(String name) {
@@ -380,6 +432,11 @@ public enum VectorIndexVersion {
     @VisibleForTesting
     public Set<Boolean> supportedQuantizationBooleans() {
         return quantizationBooleans;
+    }
+
+    @VisibleForTesting
+    public Set<VectorQuantizationType> supportedQuantizationTypes() {
+        return quantizationTypes;
     }
 
     public TypedIndexSettingsValidator<VectorIndexConfig> indexSettingValidator() {
